@startuml
skinparam shadowing false
skinparam DefaultFontName "Microsoft YaHei"
skinparam DefaultFontSize 13
title 图15  场次座位状态图

[*] --> AVAILABLE : 快照生成票池

AVAILABLE --> LOCKED : 选座 / 下单 (Redis SETNX)
LOCKED --> SOLD : 订单 PAID
LOCKED --> AVAILABLE : 超时 / 取消\n(Redis Key 过期或释放)
AVAILABLE --> DISABLED : 管理员 / 布局同步置不可售
DISABLED --> AVAILABLE : 恢复可售
SOLD --> AVAILABLE : 退款 / 管理员退票

note right of LOCKED
  LOCKED 不落库, 为 Redis 锁的运行期叠加态;
  键 encore:seat-lock:{scheduleId}:{seatCode}, TTL 15 分钟。
  落库状态仅 AVAILABLE / SOLD / DISABLED。
end note

note right of DISABLED
  适用于柱子遮挡 / 设备区
end note
@enduml
